--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify---6e4049-eb",
+  "name": "apollo-bagels",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
